Deployment/charts/network-policies/allow-backend-to-db-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-db-service
  namespace: itify
spec:
  podSelector:
    matchLabels:
      app: db-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth-service
        - podSelector:
            matchLabels:
              app: business-service
