Deployment/charts/network-policies/allow-db-service-to-postgres-equipment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-service-to-postgres-equipment
  namespace: itify
spec:
  podSelector:
    matchLabels:
      app: postgres-equipment
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: db-service
