Deployment/charts/network-policies/allow-kong-to-pgadmin.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kong-to-pgadmin
  namespace: itify
spec:
  podSelector:
    matchLabels:
      app: pgadmin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kong
