Deployment/charts/network-policies/allow-pgadmin-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pgadmin-to-postgres-users
  namespace: itify
spec:
  podSelector:
    matchLabels:
      app: postgres-users
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pgadmin

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pgadmin-to-postgres-equipment
  namespace: itify
spec:
  podSelector:
    matchLabels:
      app: postgres-equipment
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
                app: pgadmin
